<resources>
    <string name="app_name">FourPay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_gerar_cartao">Gerar cartão</string>
    <string name="txt_destinatario_pix">Para João</string>
    <string name="txt_btn_transferir">Transferir</string>
    <string name="txt_proximo">Próximo</string>
    <string name="title_tela_pix">Crie sua chave PIX</string>
    <string name="imagem_chave_pix">Imagem Chave Pix</string>
    <string name="txt_tipo_chave">Selecione o tipo de chave</string>
    <string name="txt_opc_email_pix">Email</string>
    <string name="txt_opc_cpf_pix">Cpf</string>
    <string name="txt_hint_email">Teste@foursys.com.br</string>
    <string name="txt_hint_cpf">123.3456.789-99</string>
    <string name="txt_hint_celular">(99)99999-9999</string>
    <string name="txt_opc_celular_pix">Celular</string>
    <string name="txt_gerar_chave">Gerar Chave</string>
    <string name="txt_hint_chave_aleatoria">123abc456def</string>
    <string name="txt_apresenta_chave">Chave de %1$s cadastrada com sucesso.</string>
    <string name="txt_btn_concluir_pix">Concluir</string>
    <string name="txt_imagem_chave_criada">Imagem Chave Pix Criada</string>
    <string name="txt_depositar_title">Depositar</string>
    <string name="txt_hint_deposito">R$:</string>
    <string name="txt_descrição_deposito">Informe o valor a ser depositado</string>
    <string name="txt_valor_deposito_descr">Valor deposito</string>
    <string name="txt_btn_confirmar">Confirmar</string>
    <string name="txt_valor_deposito">R$ %1$s</string>
    <string name="txt_valor_saldo"> %1$s</string>
    <string name="txt_seguro_cartao">Com o seguro cartao da 4pay, voce pode ficar tranquilo que te protegemos contra alguns imprevistos alem de fornecer sorteios mensais e coberturas contra roubo, saques....</string>
    <string name="txt_seguro_vida">Com o nosso seguro de vida 4pay, seguramos até R$150mil de capital, despesas Médico-Hospitalares e Cobertura para auxiliar e confortar seus agregados em diversas ocasioes</string>
    <string name="txt_descricao_plano">Descrição do plano...</string>
    <string name="txt_titulo_seguro">Titulo do Seguro</string>
    <string name="txt_valorRendimento">R$</string>
    <string name="txt_informe_rendimento">Informe seu rendimento</string>
    <string name="txt_cartao">Este cartão possui taxas \nconforme sua utilização</string>
    <string name="txt_sec">Segurança</string>
    <string name="txt_config_app">Configurar app</string>
    <string name="txt_noti">Notificações</string>
    <string name="txt_sobre">Sobre</string>
    <string name="txt_sair">Sair</string>
    <string name="txt_codigo_cartao">**** **** **** 8734</string>
    <string name="txt_codigo_cartao_put">**** **** **** %1$s</string>
    <string name="txt_cobranca">Solicitação de cobrança</string>
    <string name="txt_msg">Clique na notificação para mais informações.</string>
    <string name="txt_enviada_por">Enviada por %1$s</string>
    <string name="txt_enviado_por">Enviado por %1$s</string>
    <string name="txt_cartao_validade">07/29</string>
    <string name="txt_descrição_cobrar">Informe o valor a ser cobrado</string>
    <string name="txt_desc_chave_pix">Gerencie suas chaves e crie chaves novas para enviar e receber transferências.</string>
    <string name="txt_chave_aleatoria">Chave aleatória</string>
    <string name="txt_chave_quantidade">Você possui %1$s de 4 chaves</string>
    <string name="txt_desc_tipo_chave">Enviar e receber transferências pelo \nPix usando apenas seu %1$s</string>
    <string name="txt_registrar_chave">Registrar %1$s</string>
    <string name="txt_pag_desc">Estas são as opções de pagamento \ndisponíveis</string>
    <string name="txt_boleto_desc">Insira o código do boleto que \nserá pago.</string>
    <string name="txt_confirmar_pag_desc">Confira os dados do seu \npagamento</string>
    <string name="txt_escolher_pag">Escolha um método de pagamento</string>
    <string name="txt_escolher_pag_desc">Selecione um dos dois métodos para o pagamento do boleto.</string>
    <string name="txt_sobre_text">Durante o Fourcamp2022 foi proposto o desafio de fazer um banco digital para consolidar os conhecimentos adquiridos durante os 2 meses de conteudo.
E o 4pay é o banco digital feito pelo grupo 3 de Android composto por: Gabriel Santos, Igor Montezuma, Thiago Costa e Renato Rocha.</string>

</resources>