<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_alert_dialog"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="24dp">

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        app:tint="@color/preto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSuasChaves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivClose">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvEmail"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="12dp"
                android:backgroundTint="@color/azul_claro"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_email" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/txt_opc_email_pix"
                android:textColor="@color/preto"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/cvEmail"
                app:layout_constraintTop_toTopOf="@id/cvEmail"
                app:layout_constraintBottom_toBottomOf="@id/cvEmail" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:background="@drawable/line_shape_cinza"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvEmail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clEmail">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCelular"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="12dp"
                android:backgroundTint="@color/azul_claro"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_cel"
                    app:tint="@color/preto" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/txt_opc_celular_pix"
                android:textColor="@color/preto"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/cvCelular"
                app:layout_constraintStart_toEndOf="@id/cvCelular"
                app:layout_constraintTop_toTopOf="@id/cvCelular" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_shape_cinza"
                android:paddingTop="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvCelular" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clCelular">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCpf"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="12dp"
                android:backgroundTint="@color/azul_claro"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_id"
                    app:tint="@color/preto" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/txt_opc_cpf_pix"
                android:textColor="@color/preto"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/cvCpf"
                app:layout_constraintStart_toEndOf="@id/cvCpf"
                app:layout_constraintTop_toTopOf="@id/cvCpf" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_shape_cinza"
                android:paddingTop="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvCpf" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clChaveAleatoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clCpf">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvChaveAleatoria"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginLeft="12dp"
                android:backgroundTint="@color/azul_claro"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:src="@drawable/ic_key" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/txt_chave_aleatoria"
                android:textColor="@color/preto"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/cvChaveAleatoria"
                app:layout_constraintStart_toEndOf="@id/cvChaveAleatoria"
                app:layout_constraintTop_toTopOf="@id/cvChaveAleatoria" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line_shape_cinza"
                android:paddingTop="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvChaveAleatoria" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>